# claude-memory-compiler

./: AGENTS.md  pyproject.toml
scripts/: compile.py  config.py
